<resources>
    <string name="app_name">srs</string>
    <string name="welcome">Welcome</string>
    <string name="login_acc">Log in your account.</string>
    <string name="login_acc_provider">Log in your Provider account.</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign up</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="no_account_signup">Don\'t have an account? Sign up</string>
    <string name="already_account_login">Already have an account? Login</string>
    <string name="already_account_login_provider">Already have a provider account? Login</string>
    <string name="register">Register</string>
    <string name="create_acc">Create a New Account.</string>
    <string name="create_acc_provider">Create a New Provider Account.</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Enter your Phone Number</string>
    <string name="address">Enter your Address</string>
    <string name="ent_email">Enter your Email</string>
    <string name="ent_pass">Enter your Password</string>
    <string name="ent_new_pass">Enter your New Password</string>
    <string name="conf_pass">Confirm your Password</string>
    <string name="confirm">Confirm</string>
    <string name="ent_reg_email">Enter your registered email</string>
    <string name="reset_pass">Reset Your Password</string>
    <string name="welcome_srs">Service Request System</string>
    <string name="get_started">Get Started</string>
    <string name="are_provider">Are you a Service Provider? Click Here</string>
    <string name="click_here">Click Here</string>
    <string name="enter_price">Enter Price</string>



    <string name="next">Next</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_navbar">navbar</string>
    <string name="title_home">Home</string>
    <string name="title_services">Services</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_customer_nav">CustomerNav</string>
    <string name="title_history">History</string>
    <string name="title_activity_provider_nav">ProviderNav</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_requests">Requests</string>
    <string name="title_tips_blogs">Tips and Blogs</string>
    <string name="title_notifications">Notifications</string>
    <string name="provider_info">Provider Information</string>
    <string name="choose_provider">Choose Provider</string>
    <string name="req_confirm">Request Confirmation</string>
    <string name="req_info">Request Information</string>
    <string name="select_service_prompt">Select the service you want to provide</string>
    <string name="payment">Payment</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="api_key">AIzaSyBQGK_vPDtC0yno9xy1Ta47PWo1Fenwtas</string>

    <string-array name="service_provider_array">
        <item>Appliances</item>
        <item>Plumbing</item>
        <item>Electrical</item>
        <item>Home Cleaning</item>
        <item>Tutoring</item>
        <item>Packaging</item>
        <item>Computer Repair</item>
        <item>Painting</item>
        <item>Pest Control</item>
        <item>Car Cleaning</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>