<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:gravity="center"
    android:padding="16dp" >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_acc"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginBottom="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ent_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_input"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/ent_pass"
            android:background="@drawable/text_input"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/red"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:text="@string/login"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_button"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/register_from_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account_signup"
        android:layout_marginTop="16dp"/>


</LinearLayout>