<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:padding="16dp" >

<TextView
    android:id="@+id/textView8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="20sp"
    android:padding="10dp"
    android:text="@string/forget_password"
    android:textColor="@color/red"/>

<TextView
    android:id="@+id/textView9"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="15sp"
    android:layout_marginTop="6dp"
    android:paddingBottom="10dp"
    android:text="@string/ent_reg_email" />

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/ent_email"
        android:background="@drawable/text_input"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"/>
</com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/forgot_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/confirm"
    android:background="@drawable/rectangle_button"
    android:textSize="19sp"
    android:layout_marginTop="12dp" />
</LinearLayout>