<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/get_started"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
            android:textColor="@color/red"
        android:paddingBottom="20dp"
            android:layout_marginTop="400dp"
        android:textAppearance="@android:style/TextAppearance.Material.Body2" />
        <TextView
            android:id="@+id/text_get_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_srs"
            android:textSize="20sp"
            android:paddingBottom="30dp"
            android:textAppearance="@android:style/TextAppearance.Material.Body2" />


        <Button
            android:id="@+id/get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:background="@drawable/rectangle_button"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/provider_click_here"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/are_provider"
            android:textAppearance="@android:style/TextAppearance.Material.Body1" />

    </LinearLayout>


</RelativeLayout>