<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_marginTop="50dp"
    tools:context=".Payment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:gravity="center"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonDebit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="19sp"
            android:background="@drawable/rectangle_button"
            android:text="Debit"/>

        <Button
            android:id="@+id/buttonCredit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Credit"
            android:textSize="19sp"
            android:background="@drawable/rectangle_button"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:background="@drawable/text_input"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_margin="10dp"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_expiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input"
            android:textColor="@android:color/black"
            android:layout_margin="10dp"
            android:textColorHint="@android:color/black"
            android:hint="@string/mm_yy"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_margin="10dp"
            android:hint="@string/cvv"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="19sp"
        android:text="Submit"
        android:background="@drawable/rectangle_button"/>

</LinearLayout>